--- a/style.css
+++ b/style.css
@@ -156,12 +156,12 @@
         /*Bootstrap CSS ends*/        
 
         body {
-            background: url(1oelglas.jpg) no-repeat center center fixed;
+            background: url(1oelglas.png) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
-            background-color: rgba(0, 0, 0, 5);
+            background-color: rgba(255, 255, 255, 0.2);
             margin: 0;
             padding: 0;
         }
@@ -177,20 +177,26 @@
         }
 
         .arrowDown {
-            top: 0;
             float: right;
-            width: 0;
-            height: 0;
+            margin-top: 20px;
             border-left: 20px solid transparent;
             border-right: 20px solid transparent;
 
             border-top: 20px solid white;
         }
 
+        h4 {
+            float: right;
+        }
+        h5 {
+            float: right;
+        }
+
         /* unvisited link */
 
         a:link {
             color: ghostwhite;
+            text-decoration: none;
         }
 
         /* visited link */
@@ -215,7 +221,7 @@
         .beer {
             margin: 0 auto;
             margin-top: 30px;
-            box-shadow: 5px 5px black;
+            box-shadow: 5px 5px 10px black;
             padding: 20px;
             width: 700px;
             height: auto;
@@ -264,12 +270,10 @@
         }
 
         .searchbar {
-            margin-left: 1vw;
+            margin: auto;
+            justify-content: center;
         }
 
-        .searchbar>#searchBeerBtn {
-            margin-top: 1vw;
-        }
 
         nav>a>h3 {
             margin-top: 15px;
@@ -279,12 +283,14 @@
         }
 
         .searchField {    
-            padding-top: 2vw;
-            /*            border: 1px solid black;*/
-            display: inline-block;
-            width: 20vw;
-            height: 30vw;
-            background-color: rgba(91, 35, 25, 0.9)
+            width: 85vw;
+            padding: 5px;
+            height: 50px;
+            background-color: rgba(91, 35, 25, 0.6);
+            margin:auto;
+            margin-top: 50px;
+            border-radius: 10px;
+            display: flex;
         }
         .searchTitle {
             padding-top:1vw;
@@ -313,6 +319,22 @@
             margin-right: 10px;
         }
 
+        #searchBeerBtn {
+            margin-left: 10px;
+            width: 120px;
+        }
+
+        #searchBeerInput {
+            width: 65vw;
+            height: 38px;
+            border: 1px solid transparent;
+            padding: 0.375rem 0.75rem;
+            line-height: 1.5;
+            border-radius: 0.25rem;
+            font-size: 1rem;
+            vertical-align: middle;
+        }
+
         .btn-outline-light,
         .btn-outline-danger {
             float: right;
@@ -326,20 +348,16 @@
             color: rgb(20, 5, 5);
         }
 
-        #profilePic {
-            height: 60px;
-            width: 60px;
-            border-radius: 30px;
-            background-color: white;
-            float: right;
+        .searchTitle {
+            text-align:center;
+            
         }
 
         .container {
           width: 100%;
-          padding-right: 15px;
-          padding-left: 15px;
           margin-right: auto;
           margin-left: auto;
+          text-decoration: none;
         }
 
         .lds-ripple {
@@ -382,13 +400,21 @@
             top: 65px;
             
         }
-
-        
         
         @media (max-width: 700px) {
             
             .searchField {
-              width: 100vw;  
+              width: 100vw;
+              height: 50px;
+              border-radius: 0px 0px 0px 0px;
+              padding: 0;
+            }
+            #searchBeerInput {
+                height: 38px;
+                border: 1px solid transparent;
+                padding: 0.375rem 0.75rem;
+                line-height: 1.5;
+                border-radius: 0.25rem;
             }
             .searchTitle {
               text-align:center;
@@ -421,5 +447,143 @@
                 width: 30px;
                 margin-top: 10px;
                 margin-left: 0;
+            }
+            .btn {
+                color: #212529;
+                background-color: #ffc107;
+                border-color: #ffc107;
+            }
+            
+            .arrowDown {
+                margin-top: 4vw;
+                margin-right: 10px;
+            }
+            
+            h2 {
+                margin-left: 20px;
+            }
+        }
+        
+        
+        /* Authenticate classes and ids */
+
+        .userDiv {
+            position: absolute;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            top: 2.3vw;
+            right: 2vw;
+            width: 70vw;
+        }
+
+        #logOut {
+            height: 50%;
+        }
+
+        .userDiv span {
+            margin: 0 30px;
+            font-size: 1.2rem;
+        }
+
+        .userInfo {
+            width: 50px;
+            height: 50px;
+        }
+
+        .userImg {
+            width: 50px;
+            height: 50px;
+            border-radius: 25px;
+        }
+
+        .logged {
+            display: none;
+        }
+
+        .notLogged {
+            display: block;
+            width: 100%;
+        }
+
+        .logContainer {
+            display: flex;
+            justify-content: center;
+            flex-direction: row;
+            width: 100%;
+            height: 89vh;
+        }
+
+        .logInSection {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 30%;
+            width: 400px;
+            height: 200px;
+            background-color: saddlebrown;
+            border: 2px solid black;
+        }
+
+        .logInSection button {
+            width: 50%;
+            height: 20%;
+            margin-top: 2%;
+            font-weight: bold;
+            color: black;
+            align-self: center;
+            border-radius: 8px;
+            border-style: none;
+        }
+
+        .logInSection button:hover {
+            cursor: pointer;
+            background-color: goldenrod;
+            opacity: 0.8;
+        }
+
+        .loaderContainer {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1;
+        }
+
+        .loader {
+            position: relative;
+            margin: auto;
+            top: 35%;
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #DAA520;
+            width: 120px;
+            height: 120px;
+            display: none;
+            -webkit-animation: spin 2s linear infinite;
+            /* Safari */
+            animation: spin 2s linear infinite;
+        }
+
+        /* Safari */
+
+        @-webkit-keyframes spin {
+            0% {
+                -webkit-transform: rotate(0deg);
+            }
+            100% {
+                -webkit-transform: rotate(360deg);
+            }
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
             }
         }
