--- a/style.css
+++ b/style.css
@@ -721,3 +721,63 @@
         width: 100%;
     }
 
+    #popUp {
+        position: fixed;
+        width: 50%;
+        height: 50%;
+        left: 25%;
+        right: 25%;
+        top: 25%;
+        bottom: 25%;
+        background-color: brown;
+        border-radius: 5px;
+        z-index: 1;
+    }
+    #popUpContent {
+        position: relative;
+        width: 90%;
+        height: 90%;
+        left: 5%;
+        right: 5%;
+        top: 5%;
+        bottom: 5%;
+        font-size: 1.5em;
+    }
+    #confirmButton {
+        position: absolute;
+        width: 10%;
+        height: 10%;
+        left: 45%;
+        right: 45%;
+        bottom: 10px;
+        font-size: 1em;
+        background-color: red;
+        border-radius: 10px;
+        color: white;
+    }
+    #listOfCitiesContent {
+        position: relative;
+        width: 100%;
+        height: 85%;
+        color: white;
+        font-size: 2em;
+        text-align: center;
+    }
+    #popUpButton {
+        position: absolute;
+        background-color: red;
+        border-radius: 10px;
+        color: white;
+        top: 25px;
+        right: 10px;
+    }
+    #currentStore {
+        position: absolute;
+        width: 200px;
+        height: 85px;
+        top: 0;
+        right: 100px;
+        color: white;
+        top: 30px;
+    }
+
