fixade till last-child på oelfavoriter

--- a/style.css
+++ b/style.css
@@ -221,7 +221,8 @@
         }
 
         .beer:last-child {
-            margin-bottom: 30px;
+            margin-bottom: 80px;
+            position: relative;
         }
 
         .btn-outline-light {
