--- a/style.css
+++ b/style.css
@@ -518,7 +518,7 @@
                 background-color: #f8f9fa;
                 border-color: #f8f9fa;
             }
-            
+
             #showMoreBackground {
                 padding: 0;
                 background: rgba(1, 1, 1, 0.2);
@@ -585,6 +585,7 @@
         .logInSection {
             display: flex;
             flex-direction: column;
+            justify-content: center;
             position: absolute;
             top: 30%;
             width: 400px;
@@ -596,7 +597,7 @@
         .logInSection button {
             width: 50%;
             height: 20%;
-            margin-top: 2%;
+            margin: 1.3%;
             font-weight: bold;
             color: black;
             align-self: center;
