--- a/style.css
+++ b/style.css
@@ -68,10 +68,7 @@
           text-decoration: none;
         }
 
-        .btn:focus, .btn.focus {
-          outline: 0;
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-        }
+        
 
         .btn.disabled, .btn:disabled {
           opacity: 0.65;
@@ -98,9 +95,7 @@
           border-color: #f8f9fa;
         }
 
-        .btn-outline-light:focus, .btn-outline-light.focus {
-          box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
-        }
+        
 
         .btn-outline-light.disabled, .btn-outline-light:disabled {
           color: #f8f9fa;
@@ -114,11 +109,7 @@
           border-color: #f8f9fa;
         }
 
-        .btn-outline-light:not(:disabled):not(.disabled):active:focus, .btn-outline-light:not(:disabled):not(.disabled).active:focus,
-        .show > .btn-outline-light.dropdown-toggle:focus {
-          box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
-        }
-
+       
         .btn-outline-warning {
           color: #ffc107;
           background-color: transparent;
@@ -132,9 +123,7 @@
           border-color: #ffc107;
         }
 
-        .btn-outline-warning:focus, .btn-outline-warning.focus {
-          box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
-        }
+    
 
         .btn-outline-warning.disabled, .btn-outline-warning:disabled {
           color: #ffc107;
@@ -148,10 +137,7 @@
           border-color: #ffc107;
         }
 
-        .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
-        .show > .btn-outline-warning.dropdown-toggle:focus {
-          box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
-        }
+        
 
         /*Bootstrap CSS ends*/        
 
@@ -174,6 +160,7 @@
             border-bottom: 20px solid white;
             float: right;
             top: 0;
+            margin-right: 20px;
         }
 
         .arrowDown {
@@ -181,15 +168,19 @@
             margin-top: 20px;
             border-left: 20px solid transparent;
             border-right: 20px solid transparent;
-
             border-top: 20px solid white;
+            margin-right: 20px;
         }
 
         h4 {
             float: right;
+            margin-top: 10px;
+            font-size: 16pt;
         }
         h5 {
             float: right;
+            margin-top: 10px;
+            font-size: 14pt;
         }
 
         /* unvisited link */
@@ -226,10 +217,12 @@
             width: 700px;
             height: auto;
             background-color: rgba(61, 100, 61, 0.7);
+            border-radius: 5px;
         }
 
         .beer:last-child {
-            margin-bottom: 30px;
+            margin-bottom: 80px;
+            position: relative;
         }
 
         .btn-outline-light {
@@ -265,8 +258,9 @@
             top: 0;
             left: 0;
             width: 100vw;
-            background: rgba(134, 49, 12, 1);
+            background: rgba(91, 35, 25, 0.8);
             height: 80px;
+            box-shadow: 0 3px 15px 0 black
         }
 
         .searchbar {
@@ -289,8 +283,9 @@
             background-color: rgba(91, 35, 25, 0.6);
             margin:auto;
             margin-top: 50px;
-            border-radius: 10px;
+            border-radius: 5px;
             display: flex;
+            box-shadow: 5px 5px 10px black;
         }
         .searchTitle {
             padding-top:1vw;
@@ -400,6 +395,51 @@
             top: 65px;
             
         }
+
+
+        #main-wrapper {
+            padding: 0 0 50px;
+            position: relative;
+        }
+
+        #showMoreBackground {
+            padding: 1vw;
+            width: 350px;
+            margin: auto;
+        }
+        #showMore {
+            bottom: 0;
+            left: 45%;
+            position: sticky;
+            width: 100%;
+            background-color: rgba(1, 1, 1, 0.3)
+        }
+        
+        #showMore:hover {
+            color: #212529;
+            background-color: #ffc107;
+            border-color: #ffc107;
+        }
+
+        .infoDiv {
+            width: 300px;
+            float: right;
+            margin-right: 10px;
+        }
+
+        h2 {
+            font-size: 22pt;
+            margin-left: 20px;
+        }
+
+        p {
+            font-size: 14pt;
+        }
+
+        .details {
+            padding: 20px;
+        }
+
         
         @media (max-width: 700px) {
             
@@ -451,13 +491,47 @@
                 border-color: #ffc107;
             }
             
-            .arrowDown {
-                margin-top: 4vw;
+            .arrowDown, .arrowUp {
                 margin-right: 10px;
             }
             
+            
             h2 {
                 margin-left: 20px;
+                font-size: 18pt;
+            }
+            
+            h4 {
+                font-size: 16pt;
+            }
+            h5 {
+                font-size: 14pt;
+            }
+            p {
+                font-size: 12pt;
+            }
+            
+            .details .favoriteBtn {
+                margin-bottom: 10px;
+                margin-right: 10px;
+                color: #212529;
+                background-color: #f8f9fa;
+                border-color: #f8f9fa;
+            }
+
+            #showMoreBackground {
+                padding: 0;
+                background: rgba(1, 1, 1, 0.2);
+                width: 40%;
+                margin: auto;
+                border-radius: 10px;
+            }
+            #showMore {
+                margin-left: auto;
+                margin-right: auto;
+                bottom: 0;
+                position: sticky;
+                background-color: #ffc107;
             }
         }
         
@@ -474,9 +548,6 @@
             width: 70vw;
         }
 
-        #logOut {
-            height: 50%;
-        }
 
         .userDiv span {
             margin: 0 30px;
@@ -514,17 +585,19 @@
         .logInSection {
             display: flex;
             flex-direction: column;
+            justify-content: center;
             position: absolute;
             top: 30%;
             width: 400px;
             height: 200px;
-            background-color: saddlebrown;
+            background: rgba(91, 35, 25, 0.8);
+            box-shadow: 5px 5px 10px black;
         }
 
         .logInSection button {
             width: 50%;
             height: 20%;
-            margin-top: 2%;
+            margin: 1.3%;
             font-weight: bold;
             color: black;
             align-self: center;
@@ -545,54 +618,106 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.85);
             z-index: 1;
         }
 
+ .spinnerText {
+            position: relative;
+            text-align: center;
+            margin: 0 auto;
+            font-family: 'Knewave', cursive;
+            padding-bottom: 20px;
+            top: 30%;
+            width: 400px;
+            color: white;
+            letter-spacing: 3.5px;
+            -webkit-animation: fadein 4s;
+            /* Safari, Chrome and Opera > 12.1 */
+            -moz-animation: fadein 4s;
+            /* Firefox < 16 */
+            -ms-animation: fadein 4s;
+            /* Internet Explorer */
+            -o-animation: fadein 4s;
+            /* Opera < 12.1 */
+            animation: fadein 4s;
+        }
 
-.loadText {
-    color: white;
-    font-family: 'Knewave', cursive;
-    position: relative;
-    text-align: center;
-    top: 30%;
-    width: 40%;
-    overflow: hidden;
-    /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange;
-    /* The typwriter cursor */
-    white-space: nowrap;
-    /* Keeps the content on a single line */
-    margin: 0 auto;
-    /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em;
-    /* Adjust as needed */
-    animation: typing 5s steps(50, end),
-    blink-caret 0.6s step-end infinite;
-}
+        @keyframes fadein {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
 
-/* The typing effect */
+        /* Firefox < 16 */
 
-@keyframes typing {
-    from {
-        width: 0
-    }
-    to {
-        width: 40%;
-    }
-}
+        @-moz-keyframes fadein {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
 
-/* The typewriter cursor effect */
+        /* Safari, Chrome and Opera > 12.1 */
 
-@keyframes blink-caret {
-    from,
-    to {
-        border-color: transparent
-    }
-    50% {
-        border-color: orange;
-    }
-}
+        @-webkit-keyframes fadein {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+ .loadText {
+            color: white;
+            font-family: 'Knewave', cursive;
+            position: relative;
+            text-align: center;
+            top: 30%;
+            width: 300px;
+            letter-spacing: 3.5px;
+            overflow: hidden;
+            /* Ensures the content is not revealed until the animation */
+            border-right: .15em solid orange;
+            /* The typwriter cursor */
+            white-space: nowrap;
+            /* Keeps the content on a single line */
+            margin: 0 auto;
+            /* Gives that scrolling effect as the typing happens */
+            letter-spacing: .15em;
+            /* Adjust as needed */
+            animation: typing 2.3s steps(50, end),
+            blink-caret 0.6s step-end infinite;
+        }
+
+        /* The typing effect */
+
+        @keyframes typing {
+            from {
+                width: 0
+            }
+            to {
+                width: 280px;
+            }
+        }
+
+        /* The typewriter cursor effect */
+
+        @keyframes blink-caret {
+            from,
+            to {
+                border-color: transparent
+            }
+            50% {
+                border-color: orange;
+            }
+        }
 
 
 
@@ -709,19 +834,14 @@
         padding: 0 0 50px;
         position: relative;
     }
-
-    #showMoreBackground {
-        padding: 1vw;
-        background: rgba(134, 49, 12, 1);
-    }
     #showMore {
-        bottom: 0;
+        bottom: 5em;
         left: 45%;
         position: sticky;
         width: 100%;
     }
 
-    #popUp {
+#popUp {
         position: fixed;
         width: 50%;
         height: 50%;
@@ -770,6 +890,7 @@
         color: white;
         top: 30px;
         right: 500px;
+        z-index: 1;
     }
     #currentStore {
         position: absolute;
@@ -789,3 +910,14 @@
         border-radius: 5px;
     }
 
+ footer {
+            width: 100vw;
+            z-index: 1;
+            background: rgba(91, 35, 25, 0.8);
+            height: 40px;
+            position: fixed;
+            bottom: 0;
+            -moz-box-shadow: 0 -3px 15px 0 black;
+            -webkit-box-shadow: 0 -3px 15px 0 black;
+            box-shadow: 0 -3px 15px 0 black;
+        }
