--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
         /*Bootstrap CSS ends*/        
 
         body {
-            background: url(1oelglas.png) no-repeat center center fixed;
+            background: url(test.jpg) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
