--- a/style.css
+++ b/style.css
@@ -269,14 +269,15 @@
             text-align: center;
             padding-top: 10px;
             color: rgba(0, 0, 0, 0.9);
-            top: 15px;
-            right: 15px;
+            top: 45%;
+            left: 41.5%;
+/*            margin: 0 auto;*/
             width: 250px;
-            height: 80px;
+            height: 50px;
             font-size: 1.3rem;
             font-family: 'Knewave', cursive;
             border-radius: 8px;
-             -webkit-animation: fadein 3s;
+            -webkit-animation: fadein 3s;
             /* Safari, Chrome and Opera > 12.1 */
             -moz-animation: fadein 3s;
             /* Firefox < 16 */
@@ -285,24 +286,25 @@
             -o-animation: fadein 3s;
             /* Opera < 12.1 */
             animation: fadein 3s;
-}
+        }
 
-.textboxHided {
+        .textboxHided {
             position: fixed;
             z-index: 2;
             background-color: white;
             text-align: center;
             padding-top: 10px;
             color: rgba(0, 0, 0, 0.9);
-            top: 15px;
-            right: 15px;
+            top: 45%;
+            left: 41.5%;
+/*            margin: 0 auto;*/
             width: 250px;
-            height: 80px;
+            height: 50px;
             font-size: 1.3rem;
             opacity: 1;
             font-family: 'Knewave', cursive;
             border-radius: 8px;
-             -webkit-animation: fadeout linear forwards 3s;
+            -webkit-animation: fadeout linear forwards 3s;
             /* Safari, Chrome and Opera > 12.1 */
             -moz-animation: fadeout linear forwards 3s;
             /* Firefox < 16 */
@@ -311,24 +313,43 @@
             -o-animation: fadeout linear forwards 3s;
             /* Opera < 12.1 */
             animation: fadeout linear forwards 3s;
-}
+        }
 
- @-webkit-keyframes fadeout {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
-}
-@-moz-keyframes fadeout {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
-}
-@-o-keyframes fadeout {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
-}
-@keyframes fadeout {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
-}
+        @-webkit-keyframes fadeout {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
+        @-moz-keyframes fadeout {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
+        @-o-keyframes fadeout {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
+        @keyframes fadeout {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
 
         header {
             top: 0;
@@ -892,159 +913,172 @@
             }
         }
 
-@keyframes sk-foldCubeAngle {
-    0%,
-    10% {
-        -webkit-transform: perspective(140px) rotateX(-180deg);
-        transform: perspective(140px) rotateX(-180deg);
-        opacity: 0;
-    }
-    25%,
-    75% {
-        -webkit-transform: perspective(140px) rotateX(0deg);
-        transform: perspective(140px) rotateX(0deg);
-        opacity: 1;
-    }
-    90%,
-    100% {
-        -webkit-transform: perspective(140px) rotateY(180deg);
-        transform: perspective(140px) rotateY(180deg);
-        opacity: 0;
-    }
-}
-    /* Authentication ends here */
+        @keyframes sk-foldCubeAngle {
+            0%,
+            10% {
+                -webkit-transform: perspective(140px) rotateX(-180deg);
+                transform: perspective(140px) rotateX(-180deg);
+                opacity: 0;
+            }
+            25%,
+            75% {
+                -webkit-transform: perspective(140px) rotateX(0deg);
+                transform: perspective(140px) rotateX(0deg);
+                opacity: 1;
+            }
+            90%,
+            100% {
+                -webkit-transform: perspective(140px) rotateY(180deg);
+                transform: perspective(140px) rotateY(180deg);
+                opacity: 0;
+            }
+        }
 
-    #main-wrapper {
-        padding: 0 0 50px;
-        position: relative;
-    }
-    #showMore {
-        bottom: 5em;
-        left: 45%;
-        position: sticky;
-        width: 100%;
-    }
-    
-    #popUp {
-        position: fixed;
-        width: 40%;
-        height: 25%;
-        left: 30%;
-        right: 30%;
-        top: 25%;
-        bottom: 37.5%;
-        background-color: rgba(91, 35, 25, 1);
-        border-radius: 5px;
-        z-index: 1;
-        border: solid black 3px;
-    }
-    #popUpContent {
-        position: relative;
-        width: 90%;
-        height: 90%;
-        left: 5%;
-        right: 5%;
-        top: 5%;
-        bottom: 5%;
-        font-size: 1.5em;
-    }
-    #dropdowns select {
-        width: 70%;
-        left: 15%;
-        right: 15%;
-        border: solid black 2px;
-    }
-    #confirmButton {
-        position: absolute;
-        width: 10%;
-        height: 10%;
-        left: 45%;
-        right: 45%;
-        bottom: 10px;
-        font-size: 1em;
-        background-color: red;
-        border-radius: 10px;
-        color: white;
-    }
-    #listOfCitiesContent {
-        position: relative;
-        width: 100%;
-        height: 85%;
-        color: white;
-        font-size: 2em;
-        text-align: center;
-    }
-    #popUpButton {
-        position: absolute;
-        background-color: red;
-        border-radius: 10px;
-        color: white;
-        top: 30px;
-        right: 100px;
-        z-index: 1;
-    }
-    #currentStore {
-        position: absolute;
-        width: 240px;
-        height: 85px;
-        top: 0;
-        right: 150px;
-        color: white;
-        top: 30px;
-    }   
-    #listOfCounties, #listOfCities, #listOfStores {
-        position: relative;
-        width: 50%;
-        left: 25%;
-        right: 25%;
-        border-radius: 5px;
-    }
-    #popUpErrorMessage {
-        position: absolute;
-        color: white;
-        width: 50%;
-        left: 25%;
-        right: 25%;
-        bottom: 40px;
-        text-align: center;
-    }
-    footer {
-        width: 100vw;
-        z-index: 1;
-        background: rgba(91, 35, 25, 0.8);
-        height: 40px;
-        position: fixed;
-        bottom: 0;
-        -moz-box-shadow: 0 -3px 15px 0 black;
-        -webkit-box-shadow: 0 -3px 15px 0 black;
-        box-shadow: 0 -3px 15px 0 black;
-    }
+        /* Authentication ends here */
 
-    #menuDiv {
-        position: absolute;
-        top: 65px;
-        right: -15px;
-        height: 200px;
-        width: 250px;
-        background-color:rgba(91, 35, 25, .8);
-        color: white;
-        border-radius: 0 0 5px 5px;
-        text-align: center;
-        font-size: 1.3em;
-        padding-top: 10px;
-        box-shadow: 0 3px 0 0 black;
-    }
+        #main-wrapper {
+            padding: 0 0 50px;
+            position: relative;
+        }
 
-    #link {
-        margin: 0;
-        position: absolute;
-        top: 33%;
-        width: 50%;
-        left: 25%;
-        right: 25%;
-    }
+        #showMore {
+            bottom: 5em;
+            left: 45%;
+            position: sticky;
+            width: 100%;
+        }
 
-    #logOut {
-        position: relative;
-        top: 100px;
-    }
+        #popUp {
+            position: fixed;
+            width: 40%;
+            height: 25%;
+            left: 30%;
+            right: 30%;
+            top: 25%;
+            bottom: 37.5%;
+            background-color: rgba(91, 35, 25, 1);
+            border-radius: 5px;
+            z-index: 1;
+            border: solid black 3px;
+        }
+
+        #popUpContent {
+            position: relative;
+            width: 90%;
+            height: 90%;
+            left: 5%;
+            right: 5%;
+            top: 5%;
+            bottom: 5%;
+            font-size: 1.5em;
+        }
+
+        #dropdowns select {
+            width: 70%;
+            left: 15%;
+            right: 15%;
+            border: solid black 2px;
+        }
+
+        #confirmButton {
+            position: absolute;
+            width: 10%;
+            height: 10%;
+            left: 45%;
+            right: 45%;
+            bottom: 10px;
+            font-size: 1em;
+            background-color: red;
+            border-radius: 10px;
+            color: white;
+        }
+
+        #listOfCitiesContent {
+            position: relative;
+            width: 100%;
+            height: 85%;
+            color: white;
+            font-size: 2em;
+            text-align: center;
+        }
+
+        #popUpButton {
+            position: absolute;
+            background-color: red;
+            border-radius: 10px;
+            color: white;
+            top: 30px;
+            right: 100px;
+            z-index: 1;
+        }
+
+        #currentStore {
+            position: absolute;
+            width: 240px;
+            height: 85px;
+            top: 0;
+            right: 150px;
+            color: white;
+            top: 30px;
+        }
+
+        #listOfCounties,
+        #listOfCities,
+        #listOfStores {
+            position: relative;
+            width: 50%;
+            left: 25%;
+            right: 25%;
+            border-radius: 5px;
+        }
+
+        #popUpErrorMessage {
+            position: absolute;
+            color: white;
+            width: 50%;
+            left: 25%;
+            right: 25%;
+            bottom: 40px;
+            text-align: center;
+        }
+
+        footer {
+            width: 100vw;
+            z-index: 1;
+            background: rgba(91, 35, 25, 0.8);
+            height: 40px;
+            position: fixed;
+            bottom: 0;
+            -moz-box-shadow: 0 -3px 15px 0 black;
+            -webkit-box-shadow: 0 -3px 15px 0 black;
+            box-shadow: 0 -3px 15px 0 black;
+        }
+
+        #menuDiv {
+            position: absolute;
+            top: 65px;
+            right: -15px;
+            height: 200px;
+            width: 250px;
+            background-color: rgba(91, 35, 25, .8);
+            color: white;
+            border-radius: 0 0 5px 5px;
+            text-align: center;
+            font-size: 1.3em;
+            padding-top: 10px;
+            box-shadow: 0 3px 0 0 black;
+        }
+
+        #link {
+            margin: 0;
+            position: absolute;
+            top: 33%;
+            width: 50%;
+            left: 25%;
+            right: 25%;
+        }
+
+        #logOut {
+            position: relative;
+            top: 100px;
+        }
