--- a/style.css
+++ b/style.css
@@ -602,6 +602,7 @@
             }
             .card-body {
                 padding: 0;
+                margin-left:5%;
             }
 
             .header {
