--- a/style.css
+++ b/style.css
@@ -449,6 +449,10 @@
             text-align: center;
         }
 
+        .favorites h1{
+                color:white;
+        }
+
         .searchTitle {
             text-align: center;
 
