--- a/style.css
+++ b/style.css
@@ -768,6 +768,7 @@
         .userInfo {
             width: 50px;
             height: 50px;
+            cursor:pointer;
         }
 
         .userImg {
