--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@
         header {
             top: 0;
             left: 0;
-            width: 100vw;
+            width: 100%;
             background: rgba(91, 35, 25, 0.8);
             height: 80px;
             box-shadow: 0 3px 15px 0 black
@@ -1161,7 +1161,7 @@
         z-index: 1;
     }
  footer {
-            width: 100vw;
+            width: 100%;
             z-index: 1;
             background: rgba(91, 35, 25, 0.8);
             height: 40px;
