--- a/style.css
+++ b/style.css
@@ -1087,6 +1087,10 @@
         bottom: 5%;
         font-size: 1.5em;
     }
+    #popUpErrorMessage {
+        text-align: center;
+        color: white;
+    }
     #confirmButton {
         position: absolute;
         width: 20%;
