--- a/style.css
+++ b/style.css
@@ -1055,11 +1055,11 @@
     #popUp {
         position: fixed;
         width: 50%;
-        height: 25%;
+        height: 30%;
         left: 25%;
         right: 25%;
-        top: 25%;
-        bottom: 25%;
+        top: 35%;
+        bottom: 35%;
         z-index: 1;
         display: flex;
         flex-direction: column;
@@ -1087,9 +1087,10 @@
         bottom: 5%;
         font-size: 1.5em;
     }
-    #popUpErrorMessage {
+    #popUpMessage {
         text-align: center;
         color: white;
+        margin-top: 10px;
     }
     #confirmButton {
         position: absolute;
@@ -1303,7 +1304,7 @@
             font-size: .9em;
         }
 
-        #popUpErrorMessage {
+        #popUpMessage {
             font-size: .6em;
         }
 
