--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@
             margin-top: 30px;
             box-shadow: 5px 5px 10px black;
             padding: 20px;
-            width: 700px;
+            width: 100%;
             height: auto;
             background-color: rgba(61, 100, 61, 0.7);
             border-radius: 5px;
