--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,7 @@
         box-shadow: 5px 5px 10px black;
         border-radius: 5px;
         margin: auto;
+        font-family: 'Muli', sans-serif;
     }
 
     #popUp select {
@@ -1090,7 +1091,9 @@
     #popUpMessage {
         text-align: center;
         color: white;
-        margin-top: 10px;
+    }
+    #popUpButton {
+        font-family: 'Muli', sans-serif;
     }
     #confirmButton {
         position: absolute;
@@ -1164,6 +1167,9 @@
         padding-top: 10px;
         box-shadow: 0 3px 0 0 black;
         z-index: 1;
+    }
+    #store {
+        font-family: 'Muli', sans-serif;
     }
  footer {
             width: 100%;
