--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@
             color: rgba(0, 0, 0, 0.9);
             bottom: 0;
             left: 0;
-            /*            margin: 0 auto;*/
+            margin-bottom:-20px;
             width: 250px;
             height: 50px;
             font-size: 1.3rem;
@@ -293,7 +293,7 @@
             color: rgba(0, 0, 0, 0.9);
             bottom: 0;
             left: 0;
-            /*            margin: 0 auto;*/
+            margin-bottom: -20px;
             width: 250px;
             height: 50px;
             font-size: 1.3rem;
