--- a/style.css
+++ b/style.css
@@ -263,25 +263,26 @@
             z-index: 2;
             background-color: white;
             text-align: center;
-            padding-top: 20px;
+            padding-top: 17px;
             color: rgba(0, 0, 0, 0.9);
             bottom: 0;
             left: 0;
             margin-bottom:-20px;
-            width: 250px;
-            height: 50px;
-            font-size: 1.3rem;
+            width: 200px;
+            height: 40px;
+            font-size: 1.09rem;
+            font-weight: 600;
             font-family: 'Muli', sans-serif;
             border-radius: 8px;
-            -webkit-animation: fadein 2s;
+            -webkit-animation: fadein 1.7s;
             /* Safari, Chrome and Opera > 12.1 */
-            -moz-animation: fadein 2s;
+            -moz-animation: fadein 1.7s;
             /* Firefox < 16 */
-            -ms-animation: fadein 2s;
+            -ms-animation: fadein 1.7s;
             /* Internet Explorer */
-            -o-animation: fadein 2s;
+            -o-animation: fadein 1.7s;
             /* Opera < 12.1 */
-            animation: fadein 2s;
+            animation: fadein 1.7s;
         }
 
         .textboxHided {
@@ -289,26 +290,27 @@
             z-index: 2;
             background-color: white;
             text-align: center;
-            padding-top: 20px;
+            padding-top: 17px;
             color: rgba(0, 0, 0, 0.9);
             bottom: 0;
             left: 0;
             margin-bottom: -20px;
-            width: 250px;
-            height: 50px;
-            font-size: 1.3rem;
+            width: 200px;
+            height: 40px;
+            font-weight: 600;
+            font-size: 1.09rem;
             opacity: 1;
             font-family: 'Muli', sans-serif;
             border-radius: 8px;
-            -webkit-animation: fadeout linear forwards 2s;
+            -webkit-animation: fadeout linear forwards 1s;
             /* Safari, Chrome and Opera > 12.1 */
-            -moz-animation: fadeout linear forwards 2s;
+            -moz-animation: fadeout linear forwards 1s;
             /* Firefox < 16 */
-            -ms-animation: fadeout linear forwards 2s;
+            -ms-animation: fadeout linear forwards 1s;
             /* Internet Explorer */
-            -o-animation: fadeout linear forwards 2s;
+            -o-animation: fadeout linear forwards 1s;
             /* Opera < 12.1 */
-            animation: fadeout linear forwards 2s;
+            animation: fadeout linear forwards 1s;
         }
 
         @-webkit-keyframes fadeout {
